traversal.snake.Snake.scala.error
Compilation error:
Snake:9: error: value est is not a member of object plm.universe.Direction
      if(getDirection() == Direction.est){
                                     ^